fix: fixed some colours for better contrast

--- a/src/styles.css
+++ b/src/styles.css
@@ -79,7 +79,7 @@ header button {
 
 .timeline-item span {
     font-size: 14px;
-    color: #555555;
+    color: #333333;
 }
 
 
@@ -122,13 +122,13 @@ figure img {
 figcaption {
     margin-top: 8px;
     font-size: 12px;
-    color: #555;
+    color: #333;
 }
 
 
 p {
     font-size: 14px;
-    color: #555;
+    color: #333;
     margin-bottom: 8px;
 }
 
@@ -237,3 +237,4 @@ article button:focus {
     }
 
 }
+
